Fix layout of video on iOS

--- a/client/css/linkedtv.css
+++ b/client/css/linkedtv.css
@@ -147,11 +147,12 @@ a {
 /* player */
 .player {
     background-color: #000;
-    overflow: hidden;
-    height: 100%;
 }
 .player video {
-    max-height: 100%;
+  min-height: 100%; 
+  min-width: 100%;
+  height: auto !important;
+  width: auto !important;
 }
 .player-controls {
 }
